# proc-macro-workshop-solutions

./: Cargo.toml
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 01-parse.rs  progress.rs
debug/: Cargo.toml
debug/src/: lib.rs
debug/tests/: progress.rs
debug_code/: Cargo.toml
debug_code/src/: main.rs
seq/: Cargo.toml
seq/src/: lib.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
