[package]
name = "sorted"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0"

# TODO: extra-traits add Debug implementation but increase compile time in production
syn = { version = "2.0.98", features = ["extra-traits", "visit-mut", "full"] }
